--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,8 @@
-@import "_normalize";
-@import "_vars";
-@import "_fonts";
-@import "_mixins";
-@import "_default";
+@import "normalize";
+@import "vars";
+@import "fonts";
+@import "mixins";
+@import "default";
 
 // pages
 @import "main";
