--- a/sass/_default.scss
+++ b/sass/_default.scss
@@ -77,7 +77,7 @@ input, button, textarea {
   @media (max-width: $bp-small ) {
     height: 40px;
     padding: 0 10px;
-    
+
     font-size: 14px;
   }
 }
@@ -98,7 +98,7 @@ input, button, textarea {
 }
 
 .p-typical {
-    padding-left: 200px;
+    padding-left: 170px;
 }
 
 .bg-grey {
@@ -193,10 +193,19 @@ input, button, textarea {
     
     &_item {
         max-width: 780px;
+        padding: 40px;
+      border: 1px solid #e7e7e7;
+      background: #fff;
         -webkit-box-sizing: content-box;
            -moz-box-sizing: content-box;
                 box-sizing: content-box;
-            margin-bottom: 80px;
+            margin-bottom: 60px;
+      &:hover{
+        background-color: #000;
+        h4, p{
+          color: #fff;
+        }
+      }
             
             &:last-child {
                 margin-bottom: 0;
@@ -211,6 +220,12 @@ input, button, textarea {
             margin: 0;
             margin-bottom: 10px;
             color: #000;
+          a{
+            text-decoration: none;
+            &:hover{
+              text-decoration: none;
+            }
+          }
         }
 
         p {
