--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,8 +2,6 @@ body,
 html {
 	font-family: $gtw-r;
 	position: relative;
-	box-sizing: border-box;
-	font-size: 16px;
 }
 
 html {
@@ -53,14 +51,14 @@ html {
 		h5,
 		p {
 			margin: 0;
-			max-width: 75%;
+			max-width: 70%;
 		}
 
 		h5 {
 			font-size: 24px;
 			font-family: $gtw-b;
 			font-weight: bold;
-			padding: 27px 0px;
+			padding: 20px 0px;
 			color: #000;
 			margin-bottom: 10px;
 		}
@@ -69,7 +67,7 @@ html {
 			font-family: $gtw-r;
 			font-size: 18px;
 			color: #4a4a4a;
-			line-height: 131%;
+			line-height: 139%;
 		}
 
 		.square {
@@ -155,7 +153,7 @@ html {
 
 			.line {
 				position: absolute;
-				left: 18px;
+				left: 24px;
 				top: 35px;
 				height: 0;
 				width: 2px;
@@ -190,9 +188,6 @@ html {
 		&-5 {
 			padding-left: 50px;
 			margin-top: -5px;
-			p{
-				line-height: 110%;
-			}
 			
 			.square {
 				position: absolute;
@@ -711,8 +706,7 @@ html {
 	}
 	
 	&-in {
-		padding-left: 35px;
-		padding-right: 35px;
+		padding-left: 125px;
 		padding-top: 35px;
 		box-shadow: 0 2px 17px 0 rgba(186, 186, 186, 0.5);
 		height: 100%;
@@ -722,13 +716,12 @@ html {
 	}
 
 	&-img {
-		float: right;
-		margin: 0 0 8px 8px;
 		img {
-			width: 100%;
-			max-width: 250px;
 			display: block;
+			width: auto;
+			max-width: calc(100% + 125px);
 			height: auto;
+			margin-left: -125px;
 		}
 	}
 
@@ -778,7 +771,6 @@ html {
 		h3,
 		h4 {
 			margin: 0;
-			text-align: left;
 		}
 
 		h3 {
